  no longer works; it wasn't documented either.  Some internals were changed as well to simplify
  the standard case of having no transient cores.  (David Smiley)

* SOLR-16626: Upgrade to Netty 4.1.87.Final (Kevin Risden)

* SOLR-16627: Upgrade google-cloud-bom to 0.184.0, re2j to 1.6, and grpc to 1.51.0 (Kevin Risden)

==================  9.1.1 ==================

Bug Fixes
---------------------

* SOLR-16589: Large fields with large=true can be truncated when using unicode values (Kevin Risden)

* SOLR-16585: Fixed NPE when paginating MatchAllDocs with non-zero start offset, like q=*:*&start=10 (Michael Gibney)

* SOLR-16165: Rare Deadlock in SlotAcc initialization (Justin Sweeney, noble)

* SOLR-16622: Replicas don't come up active after node restart (noble, Ishan Chattopadhyaya)

Other Changes
---------------------

* SOLR-16443: Upgrade Jackson bom to 2.13.4.20221013 (Kevin Risden)

* SOLR-16568: Upgrade woodstox-core to 6.4.0 (Kira Traynor)

* SOLR-16598: Upgrade Protobuf to 3.21.12 (David Smiley)

* SOLR-16567: Fixed problem with filtering and KNN search, especially when using post-filters (Alessandro Benedetti)

* SOLR-16588: Fixed problem with default knn algorithm (Elia Porciani via Alessandro Benedetti)

* SOLR-16480: ConfigSets now have an overridable allow-list for filetypes. (Houston Putman)

==================  9.1.0 ==================

New Features
---------------------
* SOLR-16246: Introduced pre-filtering in KnnQParser (Elia Porciani via Alessandro Benedetti).

* SOLR-16111: Add hl.queryFieldPattern support, an advanced alternative to the hl.requireFieldMatch boolean flag.
  (Christine Poerschke, David Smiley)

* SOLR-15921: Load jars in <solr-install-dir>/lib/ by default (janhoy)

* SOLR-16005: Support add/update/delete field types in Admin UI Schema page.  (Ahmet Can Kepenek, Eric Pugh)

* SOLR-15853: Admin UI support for managing Paramsets and using in Queries. (Betul Ince, Eric Pugh)
